# cema

./: .gitignore  LICENSE  pyproject.toml
oxavi/: __init__.py  odistribution.py  oexplainer.py  ofeatures.py  util.py
scenarios/: evaluation.py  playground.py  run.py  test.ipynb  test.py  util.py
scenarios/configs/: scenario0.json  scenario1.json  scenario10.json  scenario11.json  scenario2.json  scenario3.json  scenario4.json  scenario5.json  scenario6.json  scenario7.json  scenario8.json  scenario9.json
scenarios/llm/: model_configs.json
scenarios/maps/: scenario11.xodr  scenario2.xodr  scenario3.xodr  scenario4.xodr  scenario9.xodr
scenarios/queries/: query_scenario0.json  query_scenario1.json  query_scenario10.json  query_scenario11.json  query_scenario2.json  query_scenario3.json  query_scenario4.json  query_scenario5.json  query_scenario6.json  query_scenario7.json  query_scenario9.json
scenarios/queries/old/: final_queries.json  query_scenario1.json  query_scenario2.json  query_scenario3.json  query_scenario4.json  query_scenario5.json  query_scenario7.json  query_scenario8.json
src/cema/: __init__.py
src/cema/llm/: __init__.py  chat.py  verbalize.py
src/cema/oxavi/: __init__.py  odistribution.py  oexplainer.py  ofeatures.py  util.py
src/cema/script/: evaluation.py  plotting.py  run.py  util.py
src/cema/xavi/: distribution.py  explainer.py  features.py  language.py  matching.py  plotting.py  query.py  util.py
xavi/: __init__.py  distribution.py  explainer.py  features.py  language.py  matching.py  plotting.py  query.py  simulation.py
