[project]
name = "cema"
version = "0.1.0"
description = "Causal Explanations for Sequential Decision-Making in Multi-Agent Systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Balint Gyevnar", email = "balint.gyevnar@ed.ac.uk"},
  {name = "Cheng Wang"}
]
maintainers = [
  {name = "Balint Gyevnar", email = "balint.gyevnar@ed.ac.uk"}
]
license = "MIT"
dependencies = [
    "igp2",
    "gofi",
    "scikit-learn~=1.6.1",
    "seaborn~=0.12.2",
    "simplenlg~=0.2.0",
    "typer>=0.15.1",
    "tqdm>=4.66.5",
]


[project.urls]
Homepage = "https://github.com/uoe-agents/cema"

[project.scripts]
cema = "cema.script.run:cli"

[project.optional-dependencies]
llm = [
  "torch==2.5.1",
  "huggingface_hub>=0.28.1",
  "vllm>=0.2.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
igp2 = { git = "https://github.com/uoe-agents/IGP2" }
gofi = { git = "https://github.com/gyevnarb/gofi" }

[tool.ruff.lint]
select = ["NPY201"]